sql branch 2 upd 3.0